resolve the layout problem

--- a/style/style.css
+++ b/style/style.css
@@ -1,107 +1,136 @@
 *{
     font-family: 'Nunito Sans', sans-serif;
+    box-sizing: border-box;
 
 }
 body{
-    /* background-color: red; */
     background-color: #fafafa;
+    margin: 0;
 }
 
-strong{
-    font-weight: 600;
-}
-.nav-bar{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 20%;
-    width: 100%;
+.header{
     background-color: #ffffff;
     position: fixed;
     top: 0;
     left: 0;
-    box-shadow: 0 0 5px -2px #858585;
-}
-
-
-.dark-mode-btn{
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-}
-
-h6{
-    font-weight: 600;
-    padding-left: 5px;
-}
-
-i{
-    font-size: 14px;
-}
-
-
-.home{
-    padding-top: 26%;
-    padding-left: 1%;
-    padding-right: 1%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 50%;
-}
-.search-section {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: flex-start;
-    gap: 50%;
-    height: 100px;
+    justify-content: space-between;
+    box-shadow: 0 0 5px -2px #858585;
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 80px;
 }
+
+.title{
+    font-size: 14px;
+    font-weight: 800;
+}
+
+.dark-mode-btn{
+    border: none;
+    background: none;
+    font-weight: 600;
+    font-size: 14px;
+    padding: 0;
+}
+
+.home{
+    padding-top: 110px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.search-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 140px;
+    align-content: space-between;
+}
+
 
 .search-input {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
     background-color: #ffffff;
-    border-radius: 2px;
+    border-radius: 3px;
     box-shadow: 0 0 5px -2px #858585;
-    width: 100%;
-    
+    width: 100%;  
 }
-
 .search-txtF {
     padding-top: 15px;
     padding-bottom: 15px;
-    width: 80%;
+    border-radius: 3px;
+    width: 100%;
     border: none;
-    color: #858585;
-}
+    font-weight: 600;
+} 
 
+.search-txtF:focus {
+    outline: none;
+} 
+
+form:focus-within{
+    outline: 2px solid;
+}
 .search-icon{
     color: #858585;
+    padding-left: 25px;
+    padding-right: 20px;
 }
 
 .list{
-    box-shadow: 0 0 5px -3px #858585;
-    width: 50%;
+    /* display: inline-block; */
+    width: 200px;
+    height: 50px;
 }
 
-.filter {
+.select{
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: #ffffff;
+    border-radius: 3px;
+    font-weight: 600;
+    box-shadow: 0 0 5px -2px #858585;
+}
+
+.select i {
+    margin-left: 30%;
+}
+
+
+.options{
+    display: none;
+    position: absolute;
+    background-color: #ffffff;
+    width: 200px;
+    border-radius: 3px;
+    margin-top: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 0 0 5px -2px #858585;
+}
+
+.options a{
+    display: block;
+    padding: 5px 25px;
     font-size: 14px;
     font-weight: 600;
-    width: 100%;
-    border: none;
-    border-radius: 2px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+}
+
+.options a:hover {
+    background-color: #858585;
+}
+
+.list:hover .options {
+    display: block;
 }
 
 
-
-.card-section{
-    margin-left: 10%; 
+    /* margin-left: 10%; 
     margin-top: 25%;
     margin-bottom: 20%;
     width: 80%;
@@ -110,28 +139,46 @@ i{
     align-items: center;
     justify-content: space-around;
     gap: 50%;
-    height: 100px;
+    height: 100px; */
+
+.card-section{
+    padding-top: 45px ;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 45px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 60px;
 }
-.card1{
-    background-color: #ffffff;
-    border-radius: 5px 5px 5px 5px;
-    box-shadow: 0 0 5px -2px #858585;
-}
+
+
 .card{
     background-color: #ffffff;
+    width: 100%;
+    border-radius: 3px;
+    box-shadow: 0 0 5px -2px #858585;
+    display: block;
 }
 
 .card-image{
     width: 100%;
-    height: 100%;
     object-fit: cover;
-    border-radius: 5px 5px 0 0;
+    border-radius: 3px 3px 0 0;
 }
 
 .card-info {
-    padding: 0 0 15% 10%;
-    /* background-color: #ffffff; */
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 40px;
     border-radius: 0 0 5px 5px;
+}
+
+.info{
+    font-weight: 300;
+}
+
+.info-title{
+    font-weight: 600;
 }
 
 a:link,
@@ -143,65 +190,74 @@ a:active {
 }
 
 @media only screen and (min-width: 740px) {
+    .title{
+        font-size: 24px;
+        font-weight: 800;
+    }
+
+    .dark-mode-btn{
+        font-size: 16px;
+    }
+
     .home{
-        padding-top: 15%;
+        padding-top: 120px;
     }
 
-    .card-section{ 
-        margin-top: 15%;
-    }
-}
-
-@media only screen and (min-width: 1200px){
-
-    .nav-bar{
-        gap: 65%;
-    }
-    
-    .home{
-        padding-top: 8.5%;
-        padding-left: 4%;
-        padding-right: 4%;
-        gap: 20%;
-        height: 100px;
-    }
-
-    .search-section {
-        flex-wrap: nowrap;
+    .search-section{
         height: auto;
     }
 
     .search-input {
-        width: 35%;
-    }
-
-
-
-    .list{
-        box-shadow: 0 0 5px -3px #858585;
-        width: 15%;
+        width: 35%;  
     }
 
     .card-section{
-        margin-left: 0; 
-        margin-right: 0;
-        margin-top: 1.5%;
-        width: 100%;
-        height: 800px;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        /* justify-content: space-between; */
-        /* align-content: space-between; */
-        gap: 0.1%;
+        margin-left: 0;
+        margin-right: -70px;
+        gap: 70px;
     }
 
-    .card1{
-        width: 20%;
+    .card{
+        width: calc(50% - 70px);
     }
+
     .card-image{
-        height: 170px;
+        height: 180px;
     }
+}
+
+@media only screen and (min-width: 1200px){
+    
+    /* .title{
+        font-size: 24px;
+        font-weight: 800;
+    } */
+
+    /* .home{
+        padding-top: 120px;
+    } */
+
+    /* .search-section{
+        height: auto;
+    } */
+
+    /* .search-input {
+        width: 35%;  
+    }
+
+    .card-section{
+        margin-left: 0;
+        margin-right: -70px;
+        gap: 70px;
+    } */
+
+    .card{
+        width: calc(25% - 70px);
+    }
+
+    /* .card-image{
+        height: 180px;
+    } */
 
 
 }
