--- a/style/styleInfoPage.css
+++ b/style/styleInfoPage.css
@@ -1,163 +1,134 @@
 *{
     font-size: 16px;
 }
+
 .home-info{
-    padding-top: 35%;
-    padding-left: 5%;
-    padding-right: 5%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 50%; 
-     height: 100px;
+    padding-top: 120px;
+    padding-left: 7%;
+    padding-right: 7%;
 }
 
-.back-input{
-    width: 30%;
-    padding: 5px;
+.back-btn{
+    border: none;
+    border-radius: 5px;
     background-color: #ffffff;
-    border-radius: 3px;
+    width: 120px;
+    height: 35px;
     box-shadow: 0 0 10px -3px #858585;
-    display: flex;
-    justify-content: center;
+}
+.back-btn i{
+    padding-right: 10px;
 }
 
-.back{
-    width: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
+
 
 .info-section{
+    margin-top: 70px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: flex-start; */
-    /* align-content: space-around; */
-    /* gap: 50%; */
-    /* height: 100px; */
+    gap: 25px;
 }
 
 .flag{
     width: 100%;
+    height: 250px;
+    object-fit: cover;
 }
 
-.info{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: space-around;
-    height: 450px;
-}
-
-.basic-info > div{
-    padding: 5px;
+.country-info{
+    display: block;
+    width: 100%;
 }
 
 .country-name{
     width: 100%;
     font-size: 20px;
 }
-.basic-info2{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.border-title{
-    width: 100%;
+
+.basic-info{
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
-.border-countries{
-    background-color: #ffffff;
-    border-radius: 3px;
-    box-shadow: 0 0 2px 0 #858585;
-    text-align: center;
-    font-size: 12px;
-    width: 28%;
+.border-countries-btn {
+    width: 31%;
+    height: 30px;
+    box-shadow: 0 0 5px -2px #858585;
+    font-size: 14px;
 }
+
+.border-btn{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.info{
+    margin-bottom: -5px;
+}
+
 
 @media only screen and (min-width: 650px) {
-    
-    .home-info{
-        padding-top: 17%;
-    }
-    .basic-info2{
-        width: 100%;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
-        gap: 1%
-    }
-
-    .border-title{
-        width: auto;
-    }
-
-    .border-countries{
-        text-align: center;
-        font-size: 12px;
-        width: 12%;
-        height: 45%;
-    }
-
     
 }
 
 @media only screen and (min-width: 1200px){
 
-    .home-info{
-        padding-top: 10%;
-        padding-right: 0;
+    .home{
+        padding-top: 160px;
+        padding-left: 7%;
+        padding-right: 7%;
     }
 
-    .back-input{
-        width: 8%;
-        padding: 7px;
-    }
     .info-section{
-        flex-wrap: nowrap;
+        text-align: start;
+        display: flex;
+        justify-items: center;
         justify-content: space-between;
         align-items: center;
+        margin-top: 60px;
     }
-
     .flag{
-        /* width: 40%; */
-        /* height: 500px; */
-
         width: 40%;
-        height: 100%;
+        height: 400px;
         object-fit: cover;
-        border-radius: 5px 5px 0 0;
     }
 
-    .info{
+    .country-info{
         width: 50%;
-        height: 100px;
-        gap: 20%;
     }
+
 
     .country-name{
         width: 100%;
-        /* height: auto; */
+        font-size: 24px;
+    }
+    .more-info{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 50px;
+    }
+    .basic-info{
         margin: 0;
     }
 
     .basic-info2{
-        width: 100%;
-        flex-wrap: nowrap;
+        width: 90%;
+        display: flex;
         justify-content: flex-start;
-        gap: 1%;
+        align-items: center;
+        gap: 20px;
     }
 
-    .border-title{
-        width: auto;
+    .border-btn{
+        width: 60%;
+       margin-top: 0;
     }
 
-    .border-countries{
-        text-align: center;
-        font-size: 12px;
-        width: 12%;
-        height: 45%;
-    }
+
+
 
 }
 
